[gd_scene load_steps=4 format=3 uid="uid://b0ll35eulteec"]

[ext_resource type="Script" uid="uid://drbf82d3guos0" path="res://remap_input_demo/remap_input_row.gd" id="1_0q6nn"]
[ext_resource type="Texture2D" uid="uid://di0tthoimapkw" path="res://addons/godot_input_icons/assets/input_atlas_textures/keyboard/special_keys/key_space.tres" id="1_sjj8v"]
[ext_resource type="Script" uid="uid://d2a2relwnivg5" path="res://addons/godot_input_icons/input_icon_texture_rect.gd" id="2_8k1rm"]

[node name="RemapInputRow" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 48)
script = ExtResource("1_0q6nn")

[node name="RowLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Action Name"
horizontal_alignment = 2

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="RemapButton" type="Button" parent="Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(52, 48)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -24.0
offset_right = 8.0
offset_bottom = 24.0
grow_vertical = 2

[node name="InputIconTextureRect" type="TextureRect" parent="Control/RemapButton"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -16.0
offset_right = 17.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_sjj8v")
expand_mode = 2
stretch_mode = 4
script = ExtResource("2_8k1rm")
action_name = &"attack"
device_indexes = PackedInt32Array(-1, 0)
metadata/_custom_type_script = "uid://d2a2relwnivg5"
